--- a/administartor/templates/dashboard.html
+++ b/administartor/templates/dashboard.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <link rel="stylesheet" href="{% static 'app/style.css' %}">
-    <title>Dashboard</title>
+    <title>Dashboard for students</title>
 </head>
 
 <body>
 
 <div class="dashboard-container">
     <div class="dashboard-card">
-        <h2>WELCOME!</h2>
+        <h2>WELCOME Student !</h2>
         <p>You have successfully logged in.</p>  
     </div>
 </div>
