--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -8,7 +8,7 @@
     <input type="password" name="password" placeholder="Password">
     <input type="password1" name="password1" placeholder=" confirm Password">
      <span><p style="color:red; margin: -5px;">{{ msg }}</p></span>
-    <button type="submit">Sign Up</button>
+    <button type="submit"></button>
     
 </form>
 
