--- a/staff/templates/login.html
+++ b/staff/templates/login.html
@@ -13,7 +13,7 @@
     <input type="text" name="username" >
     <label>Password:</label>
     <input type="password" name="password" >
-    <button type="submit">Submit</button>
+    <button type="submit">Staffubmit</button>
     <span><p style="color:red;text-align:center;">{{error}}</p></span>
 
 </form>
