--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -22,10 +22,10 @@
 </nav>
 
 <!-- BANNER -->
-<section class="banner text-center">
+<section class="banner">
     <h1>Fresh Cakes, Cookies & Brownies</h1>
     <p>Delicious treats made with love</p>
-    <a href="#products" class="btn btn-light mt-3">Shop Now</a>
+    <a href="#products" class="btn">Shop Now</a>
 </section>
 
 <!-- PRODUCTS SECTION -->
@@ -52,7 +52,7 @@
 </div>
 
 <footer class="text-center p-3 bg-light">
-    &copy; 2025 Cake Shop. All Rights Reserved.
+    &copy; 2025 Cake Shop.  Rights Reserved.
 </footer>
 
 </body>
