--- a/product/templates/product/category.html
+++ b/product/templates/product/category.html
@@ -28,7 +28,7 @@
                 <div class="card-body text-center">
                     <h5>{{ product.name }}</h5>
                     <p>₹{{ product.price }}</p>
-                    <a href="#" class="btn btn-primary">View</a>
+                    <a href="#" class="btn btn-primary">order</a>
                 </div>
             </div>
         </div>
@@ -38,9 +38,10 @@
     </div>
 </div>
 
-<footer class="text-center p-3 bg-light">
-    &copy; 2025 Cake Shop. All Rights Reserved.
-</footer>
+
 
 </body>
+
+
+
 </html>
