--- a/product/templates/product/category.html
+++ b/product/templates/product/category.html
@@ -10,11 +10,15 @@
 
 <nav class="navbar navbar-expand-lg bg-light shadow-sm">
     <div class="container">
-        <a class="navbar-brand fw-bold" href="{% url 'home' %}">Cake Shop</a>
+        <!-- Add namespace -->
+        <a class="navbar-brand fw-bold" href="{% url 'product:home' %}">Cake Shop</a>
         <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
-            
+          
+            <li class="nav-item"><a class="nav-link" href="{% url 'product:home' %}">Home</a></li> 
+            <li class="nav-item"><a class="nav-link" href="{% url 'product:my_order'%}">My Orders</a></li>
+              <li class="nav-item"><span class="nav-link fw-bold text-dark">Welcome, {{user.username}}  </span></li>
         </ul>
+
     </div>
 </nav>
 
@@ -28,8 +32,10 @@
                 <div class="card-body text-center">
                     <h5>{{ product.name }}</h5>
                     <p>₹{{ product.price }}</p>
-                    <a href="{% url 'product_order' product.id %}" class="btn btn-primary">Order</a>
-                    <a href="{% url 'product_recipe' product.id %}" class="btn btn-primary">Recipe</a>
+                    <!-- Add namespace for product_order and product_recipe -->
+                    <a href="{% url 'product:product_order' pk=product.id %}">Order</a>
+
+                    <a href="{% url 'product:product_recipe' product.id %}" class="btn btn-primary">Recipe</a>
                 </div>
             </div>
         </div>
@@ -39,10 +45,5 @@
     </div>
 </div>
 
-
-
 </body>
-
-
-
 </html>
