--- a/product/templates/product/order.html
+++ b/product/templates/product/order.html
@@ -37,7 +37,8 @@
                             Proceed to Payment
                         </button>
 
-                        <a href="{% url 'products' %}" class="btn btn-secondary">
+                        <!-- Add namespace -->
+                        <a href="{% url 'product:products' %}" class="btn btn-secondary">
                             Back to Products
                         </a>
                     </div>
